--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -5,8 +5,203 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Калькултор" Background="#FF1F1F1F" Foreground="White" Height="450" Width="350" Icon="Resources\calculator_calc_7125.ico">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ThemDark.xaml"></ResourceDictionary>
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
+
+    <Grid Background="#FF1F1F1F">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" ></RowDefinition>
+            <RowDefinition ></RowDefinition>
+            <RowDefinition ></RowDefinition>
+            <RowDefinition ></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+
+
+        <Label Grid.Row="0" x:Name="labelResult" FontSize="26" HorizontalAlignment="Right" Margin="0,2,10,2" Foreground="White"></Label>
+        <Border  Grid.Row="1" Margin="5,0,5,2" BorderThickness="2" >
+            <TextBox x:Name="textBoxExample"  FontSize="36" HorizontalAlignment="Right" Margin="0,2,5,2" Foreground="White">
+                <TextBox.BorderBrush>
+                    <ImageBrush/>
+                </TextBox.BorderBrush>
+                <TextBox.Background>
+                    <ImageBrush/>
+                </TextBox.Background>
+            </TextBox>
+        </Border>
+        <Grid Grid.Row="2" Margin="5,0,5,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Column="0" Margin="0,5,5,7">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button FontSize="22" Grid.Column="1" Click="Button_Click_1" Background="#FF131313" Foreground="White">C</Button>
+            </Grid>
+            <Button FontSize="22" Grid.Column="1" Margin="0,5,0,7" Click="Button_Click_2" Background="#FF131313" Foreground="White">Backspace</Button>
+
+        </Grid>
+        <Border Grid.RowSpan="5" Grid.Row="3" BorderThickness="2">
+            <Grid Margin="5,5,5,5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <!--Row 0-->
+                <Button Margin="2,2,2,2" Grid.Column="0" Grid.Row="0" FontSize="26" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> M+
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="1" Grid.Row="0" FontSize="26" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> MR
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2" FontSize="26" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> mod
+                </Button>
+
+                <!--Row 1-->
+                <Button Margin="2,2,2,2" Grid.Column="0" Grid.Row="1" FontSize="26" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> MC
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="1" Grid.Row="1" FontSize="26" Click="Button_Click" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> (
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="1" FontSize="26" Click="Button_Click" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> )
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="3" Grid.Row="1" FontSize="26" Click="Button_Click" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> /
+                </Button>
+
+                <!--Row 2-->
+                <Button   Margin="2,2,2,2" Grid.Column="0" Grid.Row="2" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 1
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="1" Grid.Row="2" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 2
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="2" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 3
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="3" Grid.Row="2" FontSize="26" Click="Button_Click" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> *
+                </Button>
+
+                <!--Row 3-->
+                <Button Margin="2,2,2,2" Grid.Column="0" Grid.Row="3" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 4
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="1" Grid.Row="3" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 5
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="3" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 6
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="3" Grid.Row="3" FontSize="26" Click="Button_Click" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> -
+                </Button>
+
+                <!--Row 4-->
+                <Button Margin="2,2,2,2" Grid.Column="0" Grid.Row="4" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 7
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="1" Grid.Row="4" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 8
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="4" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 9
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="3" Grid.Row="4" FontSize="26" Click="Button_Click" Background="#FF131313" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> +
+                </Button>
+
+                <!--Row 5-->
+                <Button Margin="2,2,2,2" Grid.Column="0" Grid.Row="5" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> +/-
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="1" Grid.Row="5" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> 0
+                </Button>
+                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="5" FontSize="26" Click="Button_Click" Background="#FF060606" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> ,
+                </Button>
+                <Button Style="{DynamicResource Red}" Margin="2,2,2,2" Grid.Column="3" Grid.Row="5" FontSize="26" Click="Button_Click" Background="#FF6F1921" Foreground="White">
+                    <Button.BorderBrush>
+                        <ImageBrush/>
+                    </Button.BorderBrush> =
+                </Button>
+
+            </Grid>
+        </Border>
     </Grid>
 </Window>
