--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -85,7 +85,7 @@
                         <ImageBrush/>
                     </Button.BorderBrush> MR
                 </Button>
-                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2" FontSize="26" Background="#FF131313" Foreground="White">
+                <Button Margin="2,2,2,2" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2" FontSize="26" Click="Button_Click" Background="#FF131313" Foreground="White">
                     <Button.BorderBrush>
                         <ImageBrush/>
                     </Button.BorderBrush> mod
